--- a/src/main/resources/templates/component/taxationIrv.html
+++ b/src/main/resources/templates/component/taxationIrv.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <title>DRHKAT</title>
@@ -29,12 +29,11 @@
     <!-- Ícono de Notificación y Perfil -->
     <div class="space-x-4">
       <button>
-        <i class="fas fa-bell text-cyan-500 text-lg"></i>
-      </button>
-
-      <!-- Botón de Perfil -->
-      <button>
+        <span sec:authentication="name"></span>
         <i class="fas fa-user text-cyan-500 text-lg"></i>
+      </button>
+      <button>
+        <i class="fas fa-bell text-cyan-500 text-lg"></i>
       </button>
     </div>
   </div>
@@ -45,11 +44,11 @@
   <!-- Items -->
   <div class="p-4 space-y-4">
     <!-- Inicio -->
-    <a href="/" aria-label="dashboard" class="relative px-4 py-3 flex items-center space-x-4 rounded-lg text-white bg-blue-300 from-sky-600 to-cyan-400">
+    <a href="/home" aria-label="dashboard" class="relative px-4 py-3 flex items-center space-x-4 rounded-lg text-white bg-blue-300 from-sky-600 to-cyan-400">
       <i class="fas fa-home text-white"></i>
       <span class="-mr-1 font-medium">Menu</span>
     </a>
-    <a href="/addusers" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+    <a href="/addusers" sec:authorize="hasRole('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-gift"></i>
       <span>Contribuable</span>
     </a>
@@ -70,7 +69,7 @@
       <i class="fas fa-user"></i>
       <span>Note</span>
     </a>
-    <a href="#" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+    <a th:href="@{/logout}" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-sign-out-alt"></i>
       <span>log out</span>
     </a>
