--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -100,7 +100,7 @@
                     <div>
                         <p>Vignettes</p>
                         <h2 class="text-4xl font-bold text-gray-600">535</h2>
-                        <p>25.365 $</p>
+                        <p th:text="${sum}">USD</p>
                     </div>
                     <img src="https://www.emprenderconactitud.com/img/Wallet.png" alt="wallet"
                          class="h-24 md:h-20 w-38">
