--- a/src/main/resources/templates/component/bien.html
+++ b/src/main/resources/templates/component/bien.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <title>DRHKAT</title>
@@ -89,7 +91,7 @@
           <img src="/LOGO.bmp" class="m-4">
         </div>
         <div class="lg:col-span-2">
-          <form action="/bien" method="post">
+          <form th:action="@{user/bien}" method="post">
             <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
               <div class="md:col-span-3">
                 <select name="users.id" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" required>
