--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -55,7 +55,7 @@
       <i class="fas fa-home text-white"></i>
       <span class="-mr-1 font-medium">Menu</span>
     </a>
-    <a href="/addusers" sec:authorize="hasRole('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+    <a href="/addusers" sec:authorize="hasAuthority('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-gift"></i>
       <span>Contribuable</span>
     </a>
