--- a/src/main/resources/templates/component/bien.html
+++ b/src/main/resources/templates/component/bien.html
@@ -50,7 +50,7 @@
       <i class="fas fa-home text-white"></i>
       <span class="-mr-1 font-medium">Menu</span>
     </a>
-    <a href="/addusers" sec:authorize="hasRole('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+    <a href="/addusers"  class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-gift"></i>
       <span>Contribuable</span>
     </a>
@@ -70,6 +70,14 @@
     <a href="#" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-user"></i>
       <span>Note</span>
+    </a>
+    <a href="/UserManagement" sec:authorize="hasAuthority('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+      <i class="fas fa-gift"></i>
+      <span>UserManagement</span>
+    </a>
+    <a href="/rapport" sec:authorize="hasAuthority('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+      <i class="fas fa-gift"></i>
+      <span>rapport</span>
     </a>
     <a th:href="@{/logout}" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-sign-out-alt"></i>
