--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,6 +40,10 @@
             <span></span>
             <i class="fas fa-user text-cyan-500 text-lg">Login</i>
           </a>
+      <a sec:authorize="!isAuthenticated()" th:href="@{/registre}">
+        <span></span>
+        <i class="fas fa-user text-cyan-500 text-lg">singout</i>
+      </a>
 
     </div>
   </div>
@@ -55,7 +59,7 @@
       <i class="fas fa-home text-white"></i>
       <span class="-mr-1 font-medium">Menu</span>
     </a>
-    <a href="/addusers" sec:authorize="hasAuthority('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+    <a href="/addusers"  class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-gift"></i>
       <span>Contribuable</span>
     </a>
@@ -75,6 +79,14 @@
     <a href="#" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-user"></i>
       <span>Note</span>
+    </a>
+    <a href="/UserManagement" sec:authorize="hasAuthority('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+      <i class="fas fa-gift"></i>
+      <span>UserManagement</span>
+    </a>
+    <a href="/rapport" sec:authorize="hasAuthority('ADMIN')" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
+      <i class="fas fa-gift"></i>
+      <span>rapport</span>
     </a>
     <a th:href="@{/logout}" sec:authorize="isAuthenticated()" class="px-4 py-3 flex items-center space-x-4 rounded-md text-gray-500 group">
       <i class="fas fa-sign-out-alt"></i>
