gestion des utilisateur

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,39 +14,68 @@
 
 </head>
 <body lass="bg-gray-200 lg:flex">
-<nav class="bg-white border-b border-gray-300">
-  <div class="flex justify-between items-center px-9">
-    <!-- Ícono de Menú -->
-    <button id="menu-button" class="lg:hidden">
-      <i class="fas fa-bars text-cyan-500 text-lg"></i>
-    </button>
-    <!-- Logo -->
-    <div class="ml-1">
-      <img th:src="@{/LOGO.bmp}" alt="logo" class="h-20 w-28">
-    </div>
 
-    <!-- Ícono de Notificación y Perfil -->
-    <div class="space-x-4" >
-      <!-- Botón de Perfil -->
-      <button sec:authorize="isAuthenticated()">
-        <span sec:authentication="name"></span>
-        <i class="fas fa-user text-cyan-500 text-lg"></i>
-      </button>
-      <button>
-        <i class="fas fa-bell text-cyan-500 text-lg"></i>
-      </button>
+
+<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+
+      <div class="ml-1">
+        <img th:src="@{/LOGO.bmp}" alt="logo" class="h-20 w-28">
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">DRHKAT</span>
+
+      </div>
+
+    <div class="flex md:order-2">
+      <div class="flex justify-between items-center px-9">
+        <!-- Ícono de Menú -->
+        <button id="menu-button" class="lg:hidden">
+          <i class="fas fa-bars text-cyan-500 text-lg"></i>
+        </button>
+        <!-- Logo -->
+
+
+        <!-- Ícono de Notificación y Perfil -->
+        <div class="space-x-4" >
+          <!-- Botón de Perfil -->
+          <button sec:authorize="isAuthenticated()">
+            <span sec:authentication="name"></span>
+            <i class="fas fa-user text-cyan-500 text-lg"></i>
+          </button>
+          <button>
+            <i class="fas fa-bell text-cyan-500 text-lg"></i>
+          </button>
 
           <a sec:authorize="!isAuthenticated()" th:href="@{/login}">
             <span></span>
             <i class="fas fa-user text-cyan-500 text-lg">Login</i>
           </a>
-      <a sec:authorize="!isAuthenticated()" th:href="@{/registre}">
-        <span></span>
-        <i class="fas fa-user text-cyan-500 text-lg">singout</i>
-      </a>
+          <a sec:authorize="!isAuthenticated()" th:href="@{/registre}"
+             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 md:px-5 md:py-2.5 mr-1 md:mr-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+            <span></span>
 
+            <i class="fas fa-user text-cyan-500 text-lg">singout</i>
+          </a>
+
+        </div>
+      </div>
+    </div>
+    <div class="flex items-center justify-center py-4 md:py-8 flex-wrap">
+      <button type="button" class="text-blue-700 hover:text-white border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800">All categories</button>
+      <button type="button" class="text-gray-900 border border-white hover:border-gray-200 dark:border-gray-900 dark:bg-gray-900 dark:hover:border-gray-700 bg-white focus:ring-4 focus:outline-none focus:ring-gray-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:text-white dark:focus:ring-gray-800">Shoes</button>
+      <button type="button" class="text-gray-900 border border-white hover:border-gray-200 dark:border-gray-900 dark:bg-gray-900 dark:hover:border-gray-700 bg-white focus:ring-4 focus:outline-none focus:ring-gray-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:text-white dark:focus:ring-gray-800">Bags</button>
+      <button type="button" class="text-gray-900 border border-white hover:border-gray-200 dark:border-gray-900 dark:bg-gray-900 dark:hover:border-gray-700 bg-white focus:ring-4 focus:outline-none focus:ring-gray-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:text-white dark:focus:ring-gray-800">Electronics</button>
+      <button type="button" class="text-gray-900 border border-white hover:border-gray-200 dark:border-gray-900 dark:bg-gray-900 dark:hover:border-gray-700 bg-white focus:ring-4 focus:outline-none focus:ring-gray-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:text-white dark:focus:ring-gray-800">Gaming</button>
     </div>
   </div>
+</nav>
+
+
+
+
+
+
+<nav class="bg-white border-b border-gray-300">
+
 </nav>
 
 <!-- Barra lateral -->
@@ -96,6 +125,65 @@
 </div>
 
 <div class="lg:w-full lg:ml-64 px-34 py-20 ">
+
+
+  <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-6.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-7.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-8.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-9.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-10.jpg" alt="">
+    </div>
+    <div>
+      <img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-11.jpg" alt="">
+    </div>
+  </div>
+
+
+  <section class="bg-center bg-no-repeat bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/conference.jpg')] bg-gray-700 bg-blend-multiply">
+    <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
+      <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">We invest in the world’s potential</h1>
+      <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
+      <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
+        <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+          Get started
+          <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+          </svg>
+        </a>
+        <a href="#" class="inline-flex justify-center hover:text-gray-900 items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg border border-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-400">
+          Learn more
+        </a>
+      </div>
+    </div>
+  </section>
 
 </div>
 </body>
