--- a/src/main/resources/templates/securityweb/UserManagement.html
+++ b/src/main/resources/templates/securityweb/UserManagement.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body lass="bg-gray-200 lg:flex">
+<body lass="bg-gray-700 lg:flex">
 <nav class="bg-white border-b border-gray-300">
     <div class="flex justify-between items-center px-9">
         <!-- Ícono de Menú -->
@@ -90,16 +90,14 @@
 
 
     <!-- Contenedor Principal -->
-    <div class="container mx-auto px-8">
+    <div class="container mx-auto px-8 ">
         <h1 class="text-4xl text-center mb-8">Gestion des utilisateurs</h1>
         <!--    Ajouter un étudiant -->
         <div class="flex justify-end mb-4">
-            <a href="/registreU" class="bg-blue-500 hover:bg-blue-700
-            text-white font-bold py-2 px-4 rounded">ajouter un USer</a>
+            <a href="/registreU" class="text-blue-700 hover:text-white border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800">ajouter un USer</a>
         </div>
         <div class="flex justify-end mb-4">
-            <a href="/addrole" class="bg-blue-500 hover:bg-blue-700
-            text-white font-bold py-2 px-4 rounded">ajouter un role</a>
+            <a href="/addrole" class="text-blue-700 hover:text-white border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800">ajouter un role</a>
         </div>
         <table class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400 lg:w-full lg:ml-20 px-64 py-10">
             <thead>
