gestion des utilisateur

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,12 +11,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 <body lass="bg-gray-200 lg:flex">
 
 
-<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
+<nav class="bg-white border-b border-gray-300 bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
       <div class="ml-1">
@@ -74,7 +75,7 @@
 
 
 
-<nav class="bg-white border-b border-gray-300">
+<nav class="">
 
 </nav>
 
