attribution de role

--- a/src/main/resources/templates/securityweb/deleteRole.html
+++ b/src/main/resources/templates/securityweb/deleteRole.html
@@ -90,7 +90,7 @@
 <div class="lg:w-full lg:ml-4 px-72 py-20">
     <div>
 
-        <h2 class="font-bold text-xl text-gray-600">ajouter un role</h2>
+        <h2 class="font-bold text-xl text-gray-600">Supprimer un role</h2>
         <div class="bg-white rounded shadow-lg p-4 px-4 md:p-8 mb-6">
             <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 lg:grid-cols-3">
                 <div class="text-gray-600">
@@ -99,13 +99,13 @@
                     <img src="/LOGO.bmp" class="m-4">
                 </div>
                 <div class="lg:col-span-2">
-                    <form th:action="@{/addroles}" method="post">
+                    <form th:action="@{/deleteRole}" method="post">
                         <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
                             <div class="md:col-span-3">
                                 <select name="username" class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" required>
                                     <option value="" disabled selected>Sélectionnez un utilisateur</option>
 
-                                    <option th:each="user : ${useres}" th:value="${user.username}" th:text="${user.username}"></option>
+                                    <option th:each="user : ${use}" th:value="${user.username}" th:text="${user.username}"></option>
 
 
                                 </select>
@@ -114,22 +114,22 @@
                                 <select name="rolename"  class="h-10 border mt-1 rounded px-4 w-full bg-gray-50" required>
                                     <option value="" disabled selected>Sélectionnez un Role</option>
 
-                                    <option th:each="role : ${rol}" th:value="${role.rolename}" th:text="${role.rolename}"></option>
+                                    <option th:each="role : ${rols}" th:value="${role.rolename}" th:text="${role.rolename}"></option>
                                 </select>
                             </div>
                             <div class="md:col-span-3 text-right">
                                 <div class="inline-flex items-end">
                                     <button type="submit"  class="bg-blue-500 hover:bg-amber-400 text-white font-bold py-2 px-4 rounded">
-                                        ajouter
+                                      Delete
                                     </button>
                                 </div>
                             </div>
                         </div>
                     </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
 <script>
