--- a/src/main/resources/templates/securityweb/UserManagement.html
+++ b/src/main/resources/templates/securityweb/UserManagement.html
@@ -94,10 +94,7 @@
         <h1 class="text-4xl text-center mb-8">Gestion des utilisateurs</h1>
         <!--    Ajouter un étudiant -->
         <div class="flex justify-end mb-4">
-            <a href="/registreU" class="text-blue-700 hover:text-white border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800">ajouter un USer</a>
-        </div>
-        <div class="flex justify-end mb-4">
-            <a href="/addrole" class="text-blue-700 hover:text-white border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800">ajouter un role</a>
+            <a href="/registreU" class="text-blue-700 hover:text-white border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800">ADDUSer</a>
         </div>
         <table class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400 lg:w-full lg:ml-20 px-64 py-10">
             <thead>
@@ -119,19 +116,25 @@
                 <td class="px-6 py-4" th:text="${user.email}"></td>
                 <td class="px-6 py-4" th:text="${user.password}"></td>
                 <td class="px-6 py-4" th:text="${user.active}"></td>
-                <td class="px-6 py-4" th:text="${user.appRoles}"></td>
+                <td class="px-6 py-4" >
+                    <ul>
+                        <li th:each="role : ${user.appRoles}" th:text="${role.rolename}">
+                        </li>
+                    </ul>
+                </td>
 
                 <td class="flex items-center px-6 py-4 space-x-3">
                     <a href="#" th:href="'/edit/' + ${user.username_Id}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Modifier</a>
                     <form class="inline-block" method="post" th:action="'/deletes/' + ${user.username_Id}">
                         <button type="submit" class="font-medium text-red-600 dark:text-red-500 hover:underline">Supprimer</button>
                     </form>
+                    <a href="/deleteRoles"  class="font-medium text-lime-400 dark:text-lime-400 hover:underline">DeleteRole</a>
+                    <a href="/addrole"  class="font-medium text-yellow-200 dark:text-yellow-200 hover:underline">AddRole</a>
+
                 </td>
             </tbody>
         </table>
     </div>
-
-
 </body>
 </html>
 
