attribution de role

--- a/src/main/resources/templates/securityweb/UserManagement.html
+++ b/src/main/resources/templates/securityweb/UserManagement.html
@@ -90,7 +90,7 @@
 
 
     <!-- Contenedor Principal -->
-    <div class="container mx-auto px-8 ">
+    <div class="container mx-auto px-8 d-flex justify-content-center align-items-center" style="height: 100vh;">
         <h1 class="text-4xl text-center mb-8">Gestion des utilisateurs</h1>
         <!--    Ajouter un étudiant -->
         <div class="flex justify-end mb-4">
